--- a/PMM/custom_genres.yml
+++ b/PMM/custom_genres.yml
@@ -41,7 +41,9 @@ collections:
         genre: Musical
     filters:
       title.not: "Opening Night"
-      genre.not: Animation
+      genre.not: 
+        - Animation
+        - Documentary
       label.not: Holidays
     url_poster: https://theposterdb.com/api/assets/77912
     collection_order: alpha
