--- a/PMM/genre_CUSTOM.yml
+++ b/PMM/genre_CUSTOM.yml
@@ -43,7 +43,9 @@ collections:
   Music Concert:
     cache_builders: 1
 #    tmdb_keyword: 156205    # eliminate if possible...
-    imdb_list: "https://www.imdb.com/search/keyword/?keywords=concert-film"
+    imdb_list:
+      - "https://www.imdb.com/search/keyword/?keywords=concert-film"
+#      - "https://www.imdb.com/search/title/?user_rating=5.0,10.0&num_votes=100,&genres=documentary&keywords=concert-film"
     plex_search:
       any:
         genre: Music
@@ -56,15 +58,16 @@ collections:
 
   Plays & Musicals:
     cache_builders: 1
-    imdb_list: "https://www.imdb.com/search/keyword/?keywords=based-on-stage-musical"
-    imdb_list: "https://www.imdb.com/search/keyword/?keywords=filmed-performance"
-    imdb_list: "https://www.imdb.com/search/keyword/?keywords=filmed-play"
-    imdb_list: "https://www.imdb.com/search/keyword/?keywords=stage-musical"
-    imdb_list: "https://www.imdb.com/search/title/?companies=co0023856"   # Broadway Theatre Archive
-    imdb_list: "https://www.imdb.com/search/title/?companies=co0588949"   # BroadwayHD
-    imdb_list: "https://www.imdb.com/search/title/?companies=co0493480"   # Digital Theatre
-    imdb_list: "https://www.imdb.com/search/title/?companies=co0388435"   # National Theatre Live
-    imdb_list: "https://www.imdb.com/search/title/?companies=co0538721"   # Stratford Festival
+    imdb_list:
+      - "https://www.imdb.com/search/keyword/?keywords=based-on-stage-musical"
+      - "https://www.imdb.com/search/keyword/?keywords=filmed-performance"
+      - "https://www.imdb.com/search/keyword/?keywords=filmed-play"
+      - "https://www.imdb.com/search/keyword/?keywords=stage-musical"
+      - "https://www.imdb.com/search/title/?companies=co0023856"   # Broadway Theatre Archive
+      - "https://www.imdb.com/search/title/?companies=co0588949"   # BroadwayHD
+      - "https://www.imdb.com/search/title/?companies=co0493480"   # Digital Theatre
+      - "https://www.imdb.com/search/title/?companies=co0388435"   # National Theatre Live
+      - "https://www.imdb.com/search/title/?companies=co0538721"   # Stratford Festival
     plex_search:
       any:
         genre: Musical
