--- a/PMM/genre_CUSTOM.yml
+++ b/PMM/genre_CUSTOM.yml
@@ -51,6 +51,7 @@ collections:
       genre.not:
         - Animation
         - Documentary
+        - Musical
       label.not: Holidays
     url_poster: https://theposterdb.com/api/assets/126050
     collection_order: alpha
