--- a/PMM/movie/universe.yml
+++ b/PMM/movie/universe.yml
@@ -39,7 +39,7 @@ templates:
       - name_mapping
     cache_builders: 1
     sync_mode: sync
-    collection_order: custom
+    collection_order: release
     url_poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/franchise/<<image_encoded>>.jpg
 
 collections:
