Revert "Update country.yml"
This reverts commit e1927ded891cbf7e8ca7718f72925cddbaec15af.

--- a/PMM/movie/country.yml
+++ b/PMM/movie/country.yml
@@ -264,7 +264,7 @@ dynamic_collections:
       # - Sudan                         # sd
       # - Suriname                      # sr
       - Sweden                        # se
-      - Switzerland                   # ch
+      # - Switzerland                   # ch
       # - Syria                         # sy
       # - Taiwan                        # tw
       # - Tajikistan                    # tj
