--- a/PMM/movie/universe.yml
+++ b/PMM/movie/universe.yml
@@ -51,74 +51,114 @@ collections:
     template:
       - name: shared
       - name: multi-franchise
-        image: Star Wars
-    trakt_list: https://trakt.tv/users/zorge88/lists/star-wars
-  DC Animated Universe:
-    template:
-      - name: shared
-      - name: multi-franchise
-        image: DC Universe
-    trakt_list: https://trakt.tv/users/donxy/lists/dc-animated-movie-universe
-  DC Extended Universe:
-    template:
-      - name: shared
-      - name: multi-franchise
-        image: DC Universe
-    trakt_list: https://trakt.tv/users/donxy/lists/dc-extended-universe
-    summary: The DC Extended Universe (DCEU) is the fictional shared universe where most stories in American comic book titles published by DC Comics take place. DC superheroes such as Superman, Batman, Wonder Woman, Martian Manhunter, The Flash, Green Lantern and Aquaman are from this universe, as well as teams such as the Justice League and the Teen Titans.
-  Marvel Cinematic Universe:
-    template:
-      - name: shared
-      - name: multi-franchise
-        image: Marvel Cinematic Universe
-    trakt_list: https://trakt.tv/users/donxy/lists/marvel-cinematic-universe
-  Wizarding World:
-    template:
-      - name: shared
-      - name: multi-franchise
-        image: Wizarding World
-    trakt_list: https://trakt.tv/users/strangerer/lists/harry-potter
-  "Alien / Predator":
-    template:
-      - name: shared
-      - name: multi-franchise
-        image: Alien Predator
-    trakt_list: https://trakt.tv/users/donxy/lists/alien-predator-timeline
-    name_mapping: Alien Predator
-  X-Men Universe:
-    template:
-      - name: shared
-      - name: multi-franchise
-        image: X-Men
-    trakt_list: https://trakt.tv/users/donxy/lists/x-men-universe
-  Middle Earth:
-    template:
-      - name: shared
-      - name: multi-franchise
-        image: Middle Earth
-    trakt_list: https://trakt.tv/users/dybro/lists/lord-of-the-rings
-  Fast & Furious:
-    template:
-      - name: shared
-      - name: multi-franchise
-        image: Fast & Furious
-    trakt_list: https://trakt.tv/users/vargajoe/lists/fast-and-furious-chronology
+    #     image: Star Wars
+    # trakt_list: https://trakt.tv/users/zorge88/lists/star-wars
+    url_poster: https://theposterdb.com/api/assets/13173
+    imdb_list:
+      - "https://www.imdb.com/list/ls532032424/"
+      - "https://www.imdb.com/list/ls072034866/"
+    letterboxd_list:
+      - "https://letterboxd.com/drchuck/list/star-wars/"
+      - "https://letterboxd.com/jacob/list/star-wars-fan-films/"
+      - "https://letterboxd.com/jacob/list/the-star-wars-universe-in-film-chronological/"
+  # DC Animated Universe:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: DC Universe
+  #   trakt_list: https://trakt.tv/users/donxy/lists/dc-animated-movie-universe
+  # DC Extended Universe:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: DC Universe
+  #   trakt_list: https://trakt.tv/users/donxy/lists/dc-extended-universe
+  #   summary: The DC Extended Universe (DCEU) is the fictional shared universe where most stories in American comic book titles published by DC Comics take place. DC superheroes such as Superman, Batman, Wonder Woman, Martian Manhunter, The Flash, Green Lantern and Aquaman are from this universe, as well as teams such as the Justice League and the Teen Titans.
+  # Marvel Cinematic Universe:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: Marvel Cinematic Universe
+  #   trakt_list: https://trakt.tv/users/donxy/lists/marvel-cinematic-universe
+  # Wizarding World:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: Wizarding World
+  #   trakt_list: https://trakt.tv/users/strangerer/lists/harry-potter
+  # "Alien / Predator":
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: Alien Predator
+  #   trakt_list: https://trakt.tv/users/donxy/lists/alien-predator-timeline
+  #   name_mapping: Alien Predator
+  # X-Men Universe:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: X-Men
+  #   trakt_list: https://trakt.tv/users/donxy/lists/x-men-universe
+  # Middle Earth:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: Middle Earth
+  #   trakt_list: https://trakt.tv/users/dybro/lists/lord-of-the-rings
+  # Fast & Furious:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: Fast & Furious
+  #   trakt_list: https://trakt.tv/users/vargajoe/lists/fast-and-furious-chronology
   Star Trek:
     template:
       - name: shared
       - name: multi-franchise
-        image: Star Trek
-    trakt_list: https://trakt.tv/users/arachn0id/lists/star-trek-movies
-  Rocky / Creed:
+    #     image: Star Trek
+    # trakt_list: https://trakt.tv/users/arachn0id/lists/star-trek-movies
+    url_poster: https://theposterdb.com/api/assets/145094
+    imdb_list:
+      - "https://www.imdb.com/list/ls505191558/"
+      - "https://www.imdb.com/list/ls066228833/"
+      - "https://www.imdb.com/list/ls020564448/"
+      - "https://www.imdb.com/list/ls025989530/"
+    letterboxd_list:
+      - "https://letterboxd.com/fantic/list/star-trek/"
+      - "https://letterboxd.com/kingfuchi/list/star-trek-documentaries/"  
+  # Rocky / Creed:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: Rocky Creed
+  #   trakt_list: https://trakt.tv/users/strangerer/lists/rocky
+  #   name_mapping: Rocky Creed
+  # The Mummy Universe:
+  #   template:
+  #     - name: shared
+  #     - name: multi-franchise
+  #       image: The Mummy
+  #   trakt_list: https://trakt.tv/users/rzepkowski/lists/the-mummy-movies
+      Muppets Universe:
     template:
       - name: shared
       - name: multi-franchise
-        image: Rocky Creed
-    trakt_list: https://trakt.tv/users/strangerer/lists/rocky
-    name_mapping: Rocky Creed
-  The Mummy Universe:
+    url_poster: https://theposterdb.com/api/assets/30438
+    plex_search:
+      all:
+        title: "Muppet"
+  Peanuts Universe:
     template:
       - name: shared
       - name: multi-franchise
-        image: The Mummy
-    trakt_list: https://trakt.tv/users/rzepkowski/lists/the-mummy-movies
+    url_poster: https://theposterdb.com/api/assets/188201
+    imdb_list: "https://www.imdb.com/search/keyword/?keywords=peanuts&genres=Animation"
+  Robotech/ Macross Universe:
+    template:
+      - name: shared
+      - name: multi-franchise
+    url_poster: https://image.tmdb.org/t/p/original//2wcnENmf45rqqIODrT2zWANxUW7.jpg
+    plex_search:
+      all:
+        title: "robotech,macross"
+    name_mapping: Robotech Macross Universe
